<resources>
    <string name="app_name">Stopwatch</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="chapter5">chapter 5. Stopwatch</string>
    <string name="chapter6">chapter 6,7. Secret Message</string>
    <string name="chapter8">chapter 8. Cat Chat</string>
    <string name="welcome_text">Welcome to the Secret Message app!
    Use this app to encrypt a secret message.
    Click on the Start button to begin.</string>
    <string name="message_hint">Please enter your secret message</string>
    <string name="next">Next</string>
    <string name="encrypt_text">Here is your encrypted message:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chapter9">chapter 9. Bits And Pizzas</string>
    <string name="chapter11">chapter 11. Guessing Game</string>
    <string name="chapter13">chapter 13. Guessing Game (dataBinding)</string>
    <string name="chapter14">chapter 14. Tasks</string>
    <string name="chapter18">chapter 18. Temperature Converter</string>
    <string name="chapter19">chapter 19. Guessing Game (Compose)</string>
    <string name="lives_left">You have %d lives left</string>
    <string name="incorrect_guesses">Incorrect guesses: %s</string>
    <string name="title_activity_main_temperature_converter">MainActivityTemperatureConverter
    </string>
    <string name="title_activity_main_temterature_converter">MainActivityTemteratureConverter
    </string>
</resources>